--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
     "jest-expo": "~52.0.4",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.7",
